--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~8.2.10",
     "@angular/platform-browser-dynamic": "~8.2.10",
     "@angular/router": "~8.2.10",
+    "angular-file-uploader": "^5.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.3",
     "zone.js": "~0.9.1"
   },
