--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
+    "ngx-order-pipe": "^2.0.4",
     "rxjs": "~6.5.3",
     "zone.js": "~0.9.1"
   },
